Fix alignmment problems in old versions of Edge
- Modify styles and element structure of resource list and unit list pages to fix alignment issues in old versions of Edge

Refs TAM-50

--- a/respa_admin/static_src/styles/page-home.scss
+++ b/respa_admin/static_src/styles/page-home.scss
@@ -120,8 +120,10 @@ main {
     }
   }
 
-  section.resources,
-  section.units {
+  .main-section {
+    .panel-body:before, .panel-body:after {
+      display: none !important;
+    }
 
     .container {
       padding: 32px 0 100px;
@@ -146,12 +148,6 @@ main {
         padding-right: 10px;
         font-size: $font-size-small;
       }
-    }
-
-    /* Unit list has only two columns */
-    .unit-list ul li div.panel div.panel-body,
-    .unit-list ul li.list-group-item.sort-bar {
-      grid-template-columns: 0px 7fr 3fr 2fr;
     }
 
     .resource-list ul li,
@@ -210,11 +206,38 @@ main {
         }
       }
 
-      div.panel img, li div.empty-holder {
+      li div.empty-holder {
         position: absolute;
         width: $list-item-height;
         height: $list-item-height;
       }
+
+      div.panel img {
+        display: flex;
+        grid-area: 1.125;
+        width: $list-item-height;
+        height: $list-item-height;
+      }
+    }
+  }
+
+  section.resources {
+    @extend .main-section;
+
+    /* Resource list has four columns */
+    .unit-list ul li div.panel div.panel-body,
+    .unit-list ul li.list-group-item.sort-bar {
+      grid-template-columns: 0px 7fr 3fr 2fr;
+    }
+  }
+
+  section.units {
+    @extend .main-section;
+
+    /* Unit list has three columns */
+    .unit-list ul li div.panel div.panel-body,
+    .unit-list ul li.list-group-item.sort-bar {
+      grid-template-columns: 7fr 3fr 2fr;
     }
   }
 }
